fix: hide horizontal overflow for mobile

--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+html {
+  overflow-x: hidden;
 }
 
 body {
@@ -30,4 +25,5 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
 }
